# dynexp

./: .gitattributes  .gitignore  AUTHORS.txt  Doxyfile  QUICKSTART.md  README.md
doc/: AnalogIn_8cpp.html  AnalogIn_8cpp_source.html  AnalogIn_8h.html  AnalogIn_8h.js  AnalogIn_8h_source.html  AnalogOut_8cpp.html  AnalogOut_8cpp_source.html  AnalogOut_8h.html  AnalogOut_8h.js  AnalogOut_8h_source.html  ArbitraryFunctionFromCSV_8cpp.html  ArbitraryFunctionFromCSV_8cpp_source.html  ArbitraryFunctionFromCSV_8h.html  ArbitraryFunctionFromCSV_8h.js  ArbitraryFunctionFromCSV_8h_source.html  BusyDialog_8cpp.html  BusyDialog_8cpp_source.html  BusyDialog_8h.html  BusyDialog_8h.js  BusyDialog_8h_source.html  Camera_8cpp.html  Camera_8cpp_source.html  Camera_8h.html  Camera_8h.js  Camera_8h_source.html  ChoiceListDialog_8cpp.html  ChoiceListDialog_8h.html  (+5175 more)
src/DynExpManager/: BusyDialog.cpp  BusyDialog.h  BusyDialog.ui  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.default  ChoiceListDialog.cpp  ChoiceListDialog.h  ChoiceListDialog.ui  CircuitDiagram.cpp  CircuitDiagram.h  CircuitDiagram.ui  CommonModuleEvents.cpp  CommonModuleEvents.h  DynExpAbout.cpp  DynExpAbout.h  DynExpAbout.ui  DynExpCore.cpp  DynExpCore.h  DynExpDefinitions.cpp  DynExpDefinitions.h.in  DynExpManager.cpp  DynExpManager.h  DynExpManager.qrc  DynExpManager.rc  DynExpManager.ui  ErrorListDialog.cpp  ErrorListDialog.h  ErrorListDialog.ui  Exception.cpp  Exception.h  HardwareAdapter.cpp  HardwareAdapter.h  Instrument.cpp  Instrument.h  Libraries.cpp  Libraries.h  Managers.cpp  Managers.h  Module.cpp  (+26 more)
src/DynExpManager/HardwareAdapters/: CMakeLists.txt  HardwareAdapterEthernet.cpp  HardwareAdapterEthernet.h  HardwareAdapterNIDAQ.cpp  HardwareAdapterNIDAQ.h  HardwareAdapterPVCam.cpp  HardwareAdapterPVCam.h  HardwareAdapterQutoolsTDC.cpp  HardwareAdapterQutoolsTDC.h  HardwareAdapterSerialPort.cpp  HardwareAdapterSerialPort.h  HardwareAdapterSmarAct.cpp  HardwareAdapterSmarAct.h  HardwareAdapterSwabianInstrumentsPulseStreamer.cpp  HardwareAdapterSwabianInstrumentsPulseStreamer.h  HardwareAdapterZILabOne.cpp  HardwareAdapterZILabOne.h  HardwareAdaptergRPC.cpp  HardwareAdaptergRPC.h
src/DynExpManager/Instruments/: CMakeLists.txt  DummyCamera.cpp  DummyCamera.h  DummyDataStreamInstrument.cpp  DummyDataStreamInstrument.h  InterModuleCommunicator.cpp  InterModuleCommunicator.h  NIDAQAnalogIn.cpp  NIDAQAnalogIn.h  NIDAQAnalogOut.cpp  NIDAQAnalogOut.h  NIDAQDigitalIn.cpp  NIDAQDigitalIn.h  NIDAQDigitalOut.cpp  NIDAQDigitalOut.h  NenionLeakvalveF3.cpp  NenionLeakvalveF3.h  NetworkAnalogInInstr.cpp  NetworkAnalogInInstr.h  NetworkAnalogOutInstr.cpp  NetworkAnalogOutInstr.h  NetworkDataStreamInstrument.cpp  NetworkDataStreamInstrument.h  NetworkDigitalInInstr.cpp  NetworkDigitalInInstr.h  NetworkDigitalOutInstr.cpp  NetworkDigitalOutInstr.h  NetworkSpectrometer.cpp  NetworkSpectrometer.h  NetworkTimeTagger.cpp  NetworkTimeTagger.h  PI-C-862.cpp  PI-C-862.h  PVCam.cpp  PVCam.h  QutoolsQuTAG.cpp  QutoolsQuTAG.h  RS_SMB100B.cpp  RS_SMB100B.h  RS_SMC100A.cpp  (+9 more)
src/DynExpManager/MetaInstruments/: AnalogIn.cpp  AnalogIn.h  AnalogOut.cpp  AnalogOut.h  CMakeLists.txt  Camera.cpp  Camera.h  DataStreamInstrument.cpp  DataStreamInstrument.h  DigitalIn.cpp  DigitalIn.h  DigitalOut.cpp  DigitalOut.h  FunctionGenerator.cpp  FunctionGenerator.h  InputPort.cpp  InputPort.h  LockinAmplifier.cpp  LockinAmplifier.h  OutputPort.cpp  OutputPort.h  Spectrometer.cpp  Spectrometer.h  Stage.cpp  Stage.h  TimeTagger.cpp  TimeTagger.h  gRPCInstrument.cpp  gRPCInstrument.h
src/DynExpManager/Modules/: ArbitraryFunctionFromCSV.cpp  ArbitraryFunctionFromCSV.h  CMakeLists.txt  InputPortReader.cpp  InputPortReader.h  InputPortReader.ui  LockinAmplifierControl.cpp  LockinAmplifierControl.h  LockinAmplifierControl.ui  NetworkAnalogInModule.cpp  NetworkAnalogInModule.h  NetworkAnalogOutModule.cpp  NetworkAnalogOutModule.h  NetworkDataStreamInstrumentModule.cpp  NetworkDataStreamInstrumentModule.h  NetworkDigitalInModule.cpp  NetworkDigitalInModule.h  NetworkDigitalOutModule.cpp  NetworkDigitalOutModule.h  NetworkTimeTaggerModule.cpp  NetworkTimeTaggerModule.h  OutputPortWriter.cpp  OutputPortWriter.h  OutputPortWriter.ui  SignalDesigner.cpp  SignalDesigner.h  SignalDesigner.ui  SignalPlotter.cpp  SignalPlotter.h  SignalPlotter.ui  Stage1D.cpp  Stage1D.h  Stage1D.ui  StreamManipulator.cpp  StreamManipulator.h  Trajectory1D.cpp  Trajectory1D.h  Trajectory1D.ui  gRPCModule.cpp  gRPCModule.h
src/DynExpManager/Modules/ImageViewer/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  ImageViewerEvents.cpp  ImageViewerEvents.h
src/DynExpManager/Modules/ODMR/: CMakeLists.txt  ODMR.cpp  ODMR.h  ODMR.ui  ODMRWidget.cpp  ODMRWidget.h
src/DynExpManager/Modules/SpectrumViewer/: CMakeLists.txt  SpectrumViewer.cpp  SpectrumViewer.h  SpectrumViewer.ui  SpectrumViewerEvents.cpp  SpectrumViewerEvents.h
src/DynExpManager/Modules/WidefieldMicroscope/: CMakeLists.txt  WidefieldMicroscope.cpp  WidefieldMicroscope.h  WidefieldMicroscope.ui  WidefieldMicroscopeWidget.cpp  WidefieldMicroscopeWidget.h
src/DynExpManager/icons/: convert_to_ico.sh
src/DynExpManager/include/: .gitignore  grpc_generate_cpp.cmake
src/DynExpManager/include/NIDAQ/: README.txt
src/DynExpManager/include/PVCam/: README.txt
src/DynExpManager/include/SmarAct/: README.txt
src/DynExpManager/include/SwabianInstruments/: README.txt
src/DynExpManager/include/ZI/: README.txt
src/DynExpManager/include/qutools/: README.txt
src/DynExpManager/proto/: CMakeLists.txt  Common.proto  NetworkAnalogIn.proto  NetworkAnalogOut.proto  NetworkDataStreamInstrument.proto  NetworkDigitalIn.proto  NetworkDigitalOut.proto  NetworkSpectrometer.proto  NetworkTimeTagger.proto  WidefieldLocalization.proto
src/DynExpManager/template/: HardwareAdapter.cpptpl  HardwareAdapter.htpl  Instrument.cpptpl  Instrument.htpl  MetaInstrument.cpptpl  MetaInstrument.htpl  Module.cpptpl  Module.htpl  Module.uitpl  run-code-template.sh
src/DynExpManager/template/code-template/: .gitignore  README.md  codetempl.py
(+218 files in other folders)
